--- a/src/iOS/Info.plist
+++ b/src/iOS/Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
     <key>CFBundleDisplayName</key>
-    <string>agrorama_new</string>
+    <string>agrorama</string>
     <key>CFBundleExecutable</key>
-    <string>agrorama_new</string>
+    <string>agrorama</string>
     <key>CFBundleGetInfoString</key>
     <string>ArcGIS</string>
     <key>CFBundleIcons</key>
